# yoloncv

./: CMakeLists.txt  README.md  detect_img.cpp  read_cfg.cpp  read_cfg.h  testoncv.py  yolov3-tiny.data
screenshot/: README.md
